<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:background="@drawable/header_footer" style="@style/MatchParentWrapContent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ImageButton android:enabled="true" android:id="@id/img_view_current_location_button" android:background="@drawable/map_current_location_selector" android:clickable="true" android:layout_marginLeft="10.0dip" android:layout_alignParentLeft="true" android:layout_centerVertical="true" android:contentDescription="@string/current_location" style="@style/AllWrapContent" />
    <RelativeLayout android:id="@id/list_btn_parent" android:paddingTop="5.0dip" android:paddingRight="5.0dip" android:paddingBottom="5.0dip" android:layout_marginRight="5.0dip" android:layout_alignParentRight="true" android:layout_centerVertical="true" style="@style/AllWrapContent">
        <Button android:gravity="center" android:id="@id/btn_show_list" android:background="@drawable/list_btn_selector" android:clickable="true" android:text="@string/branch_detail_action_list_title" android:layout_centerVertical="true" style="@style/AllWrapContent" />
    </RelativeLayout>
    <RelativeLayout android:id="@id/map_btn_parent" android:paddingLeft="5.0dip" android:paddingTop="5.0dip" android:paddingBottom="5.0dip" android:layout_toLeftOf="@id/list_btn_parent" android:layout_centerVertical="true" style="@style/AllWrapContent">
        <Button android:enabled="false" android:gravity="center" android:id="@id/btn_show_map" android:background="@drawable/map_btn_selector" android:clickable="true" android:text="@string/branch_detail_action_map_title" android:layout_centerVertical="true" style="@style/AllWrapContent" />
    </RelativeLayout>
</RelativeLayout>